spacing change fix v2

--- a/assets/public/css/backend.css
+++ b/assets/public/css/backend.css
@@ -1206,19 +1206,15 @@ div.margin-xl {
   height: 45rem;
   margin-right: 24px;
 }
-@media (min-width: 797.6px) {
+@media (min-width: 1199.6px) {
   .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article {
     width: 35rem;
   }
 }
 @media (max-width: 1199.5px) {
   .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article {
+    width: 43rem;
     height: 55rem;
-  }
-}
-@media (max-width: 797.5px) {
-  .il_block.il_blog-block-section.blog-carousel-enabled.hp-meet-our-donors-section .container .il_inner_posts_container article {
-    width: 38rem;
   }
 }
 @media (max-width: 479.5px) {
